--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ use_modern_java_syntax = false
 
 # Compilation Options
 generate_sources_jar = true
-generate_javadocs_jar = false
+generate_javadocs_jar = true
 
 # Testing
 enable_junit_testing = true
