update dependencies ender io и ender core перенёс в libs, т.к. у меня нестабильно работает мавен

--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -88,9 +88,15 @@ dependencies {
     implementation 'mezz:jei:4.29.15'
     implementation rfg.deobf("curse.maven:baubles-227083:2518667")
     implementation 'com.github.hohserg1:HookLib:3.28'
-    implementation('com.enderio:endercore:0.5.78') {transitive = false}
-    implementation('crazypants:enderio:5.3.72') {transitive = false}
+//    implementation('com.enderio:endercore:0.5.78') {transitive = false}
+//    implementation('crazypants:enderio:5.3.72') {transitive = false}
+    implementation rfg.deobf("curse.maven:cofh_core-69162:2920433")
+    implementation rfg.deobf("curse.maven:cofh_world-271384:2920434")
+    implementation rfg.deobf("curse.maven:thermal_foundation-222880:2926428")
+    implementation rfg.deobf("curse.maven:redstone_flux-270789:2920436")
+    implementation rfg.deobf("curse.maven:top-addons-247111:2887479")
+    runtimeOnly rfg.deobf("curse.maven:theonesmeagle-977883:7095096")
 
-//    implementation rfg.deobf(fileTree("libs"))
+    implementation fileTree("libs")
 
 }
