hooks now works частично, но уже что-то

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Gradle Properties
-org.gradle.jvmargs = -Xmx3G
+org.gradle.jvmargs = -Xmx3G -Dmixin.debug=true
 
 # Source Options
 # Use Modern Java(9+) Syntax (Courtesy of Jabel)
@@ -74,7 +74,7 @@ modrinth_debug = false
 # RetroFuturaGradle allows Minecraft sources to be edited, and have the changes reflected upon running it
 # Good for previews when coremodding, or generally seeing how behaviours can change with certain code applied/unapplied
 # Turning this on allows Minecraft sources to persist and not regenerate
-change_minecraft_sources = true
+change_minecraft_sources = false
 
 # Tags
 # A RetroFuturaGradle concept akin to Ant ReplaceTokens
@@ -90,20 +90,20 @@ tag_class_name = ${root_package}.${mod_id}.Tags
 # AT files should be in the root of src/main/resources with the filename formatted as: `mod_id_at.cfg`
 # Use the property `access_transformer_locations` to state custom AT files if you aren't using the default `mod_id_at.cfg` location
 # If multiple locations are stated, use spaces as the delimiter
-use_access_transformer = false
+use_access_transformer = true
 access_transformer_locations = ${mod_id}_at.cfg
 
 # Mixins
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # Only use mixins once you understand the underlying structure
-use_mixins = false
+use_mixins = true
 mixin_booter_version = 10.7
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
 # Each config can only have one and only one package root.
 # Generate missing configs, obtain from mixin_configs and generate file base on name convention: "mixins.config_name.json"
 # You should change package root once they are generated
-generate_mixins_json = true
+generate_mixins_json = false
 # Delimit configs with spaces. Should only put configs name instead of full file name
 mixin_configs = ${mod_id}
 # A refmap is a json that denotes mapping conversions, this json is generated automatically, with the name `mixins.mod_id.refmap.json`
