--- a/gradle/scripts/dependencies.gradle
+++ b/gradle/scripts/dependencies.gradle
@@ -85,6 +85,7 @@ dependencies {
     compileOnlyApi "org.jetbrains:annotations:26.0.2"
     annotationProcessor "org.jetbrains:annotations:26.0.2"
 
+    implementation "com.cleanroommc:configanytime:3.0"
     implementation 'mezz:jei:4.29.15'
     compileOnly rfg.deobf("curse.maven:baubles-227083:2518667")
     runtimeOnly rfg.deobf("curse.maven:baubles-ex-1096600:7609484")
