--- a/tags.properties
+++ b/tags.properties
@@ -1,6 +1,6 @@
 VERSION = ${mod_version}
 MOD_ID = ${mod_id}
 MOD_NAME = ${mod_name}
-DEPENDENCIES = required-after:baubles;required-after:hooklib;after:thermalfoundation;after:thermalexpansion;after:endercore;after:enderio;after:redstoneflux;after:cofhcore;after:cofhworld;after:codechickenlib;after:ic2
+DEPENDENCIES = required-after:baubles;required-after:hooklib;required-after:configanytime;after:thermalfoundation;after:thermalexpansion;after:endercore;after:enderio;after:redstoneflux;after:cofhcore;after:cofhworld;after:codechickenlib;after:ic2
 CLIENT_PROXY_PATH = ${root_package}.${mod_id}.proxy.ClientProxy
 SERVER_PROXY_PATH = ${root_package}.${mod_id}.proxy.CommonProxy
